--- a/App1/packages.config
+++ b/App1/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="wpa81" />
   <package id="RichTextBlock.Html2Xaml" version="1.1.0.0" targetFramework="wpa81" />
+  <package id="sqlite-net" version="1.0.8" targetFramework="wpa81" />
 </packages>
